# vaOne-agent

./: .gitignore  Cargo.toml  README.md  developerID_application.cer  package.json  tsconfig.json  vite.config.ts
captcha-db/: Cargo.toml  readme.md
captcha-db/assets/: default-db.json
captcha-db/src/: database.rs  fingerprint.rs  glyph.rs  lib.rs  matcher.rs  models.rs  normalize.rs  svg.rs  trainer.rs
pdf-core/: Cargo.toml
pdf-core/src/: binder.rs  border.rs  fonts.rs  image.rs  layout.rs  lib.rs  models.rs  renderer.rs  state.rs  text.rs  utils.rs
pdf-core/src/pagination/: constants.rs  layout_builder.rs  page.rs  page_renderer.rs  pagination_context.rs  paginator.rs
pdf-core/src/table/: class_name.rs  mod.rs  models.rs  rect.rs  table_border.rs  table_layout.rs  table_render.rs  table_row.rs
pdf-core/src/template/: evaluator.rs  formatter.rs  mod.rs  parser.rs
report-cli/: Cargo.toml
report-cli/src/: main.rs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  captcha-db.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs  window_config.rs
src-tauri/src/api/: http.rs
src-tauri/src/auth/: auth_api.rs  mod.rs  token_manager.rs
src-tauri/src/commands/: api_command.rs  invoice.rs  mod.rs  pdf.rs  printer.rs  system.rs
src-tauri/src/models/: agent_info.rs  mod.rs  system.rs
src-tauri/src/pdf/: binder.rs  border.rs  fonts.rs  image.rs  layout.rs  mod.rs  models.rs  parser.rs  renderer.rs  rich_text.rs  text.rs  utils.rs
src-tauri/src/pdf/pagination/: constants.rs  cursor.rs  layout_builder.rs  mod.rs  models.rs  page.rs  page_break.rs  page_context.rs  page_renderer.rs  pagination_context.rs  paginator.rs  table.rs
src-tauri/src/pdf/table/: mod.rs  models.rs  rect.rs  table_border.rs  table_layout.rs  table_render.rs  table_row.rs
src-tauri/src/pdf/template/: evaluator.rs  formatter.rs  mod.rs  models.rs  parser.rs  tokenizer.rs
src-tauri/src/services/: mod.rs  update.rs
src-tauri/src/services/local_server/: handlers.rs  mod.rs  routes.rs  types.rs
src-tauri/src/services/other_invoice/: m_invoice.rs  mod.rs  save_invoice.rs
src-tauri/src/services/tct/: fetch_invoices.rs  mod.rs
src-tauri/src/services/ws/: broadcast.rs  events.rs  handler.rs  mod.rs  router.rs  server.rs
src-tauri/src/utils/: mod.rs  notification.rs  public.rs
src-tauri/update/: create-latest-json.sh  generate-latest.bat  generate-latest.ps1  key-update.txt  lastest1.json  latest.json  private.key  readme.txt
src-tauri/windows/: hooks.nsh
src/api/: pdf.ts  tokenService.ts  useCancellation.tsx
src/api/axios/: axiosClient.ts  refreshToken.ts
src/api/services/: auth.service.ts  image.service.ts  mInvoice.service.ts  saveInvoice.service.ts  tct.service.ts
src/assets/reports/: template.json
src/components/: AppWindow.tsx  Button.tsx  Dialog.tsx  Divider.tsx  GlobalDialog.tsx  GlobalLoading.tsx  IconLucide.tsx  Input.tsx  Line.tsx  Loading.tsx  Progress.tsx  Switch.tsx  Tooltip.tsx
src/hook/: useEscape.ts  useUpdater.ts
src/pages/: BlankPage.tsx  GetInvoiceTct.tsx  GetInvoices.tsx  LoginEmpty.tsx  LoginMInvoicePage.tsx  LoginPage.tsx  LoginSaveInvoicePage.tsx  LoginTctPage.tsx  PreviewReport.tsx  QuitPage.tsx  Settings.tsx  Splash.tsx  Update.tsx
src/service/: dialog.service.ts  loading.service.ts  updater.ts
src/stores/: app.store.ts
src/style/: Progress.css
update/: create-latest-json.sh  generate-latest.bat  generate-latest.ps1  key-update.txt  latest.json  public.key  readme.txt
