[package]
name = "pdf-core"
version = "1.0.0"
edition = "2021"

[lib]
name = "pdf_core"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true

printpdf = { version = "0.8.2", features = ["png", "jpeg"] }
evalexpr = "12"
ttf-parser = "0.25"
regex = "1"
once_cell = "1"
num-format = "0.4"
base64 = "0.22"
zstd = "0.13"