[package]
name = "vaone-plugin"
version = "1.0.0"
description = "A Tauri App"
authors = ["VACOM"]
edition = "2021"
default-run = "vaone-plugin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vaone_plugin"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "report-cli"
path = "src/bin/report-cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }

axum = { version = "0.8", features = ["ws"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tower-http = { version = "0.6", features = ["cors"] }
tauri-plugin-autostart = "2"
reqwest = { version = "0.13.4", features = ["json"] }
url = "2"

printpdf = { version = "0.8.2", features = ["png", "jpeg"] }
thiserror = "2.0.18"
anyhow = "1.0.103"
dirs = "6.0.0"
printers = "2"

tokio-tungstenite = "0.24"
futures-util = "0.3"
chrono = "0.4.45"

ttf-parser = "0.25"
regex = "1.12.4"
once_cell = "1.21.4"
num-format = "0.4"
base64 = "0.22"
zstd = "0.13"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
evalexpr = "12"
