[package]
name = "vaone-plugin"
version = "1.0.0"
description = "A Tauri App"
authors = ["VACOM"]
edition = "2021"
default-run = "vaone-plugin"

[lib]
name = "vaone_plugin"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# =========================
# Workspace crates
# =========================
pdf-core = { path = "../pdf-core" }

captcha-db = { path = "../captcha-db" }

# =========================
# Tauri
# =========================
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"

# =========================
# Async / Network
# =========================
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
reqwest = { version = "0.13.4", features = [
    "json",
    "cookies"
] }
url = "2"

# =========================
# Serialize
# =========================
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# =========================
# Utils
# =========================
anyhow = "1"
chrono = "0.4"
dirs = "6.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
